--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pdfkit": "^0.17.2",
     "pg": "^8.11.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "esbuild": "^0.21.5"
